--- a/notebooks/spectral_indices.ipynb
+++ b/notebooks/spectral_indices.ipynb
@@ -52,25 +52,25 @@
     "\n",
     "NDVI is used to outline the presence of vegetation. It is used to indicate relative density, or the amount, of the green vegetation present in the image. This index uses reflectance from a red band around 0.66 μm and a near-Infrared band around 0.86 μm. The red band is found in the absorption region of the chlorophyll, while the near-IR band is used in high reflectance plateau of the vegetation canopies. These two bands sense different depths over the vegetation canopies.\n",
     "\n",
-    "$$ NDVI = \\frac{NIR - RED}{NIR + RED}$$\n",
+    "$$ NDVI = \\frac{NIR - RED}{NIR + RED} = \\frac{B08 - B04}{B08 + B04}$$\n",
     "\n",
     "### NDWI - Normalized Difference Water Index\n",
     "\n",
     "NDWI is used to differentiate water from the dry land or rather most suitable for water body mapping. Water bodies have a low radiation and strong absorbability in the visible infrared wavelengths range. NDWI uses near Infra-red and green bands of remote sensing images based on the occurrence. It can boost the water information efficiently in most of the cases. It’s subtle in land built-up and often ends up in overestimated water bodies.\n",
     "\n",
-    "$$ NDWI = \\frac{NIR - MIR}{NIR + MIR}$$\n",
+    "$$ NDWI = \\frac{NIR - SWIR}{NIR + SWIR} = \\frac{B08 - B11}{B08 + B11}$$\n",
     "\n",
     "### NDSI - Normalized Difference Snow Index\n",
     "\n",
     "NDSI is used to delineate the presence of snow/ice. It is a standardized ratio of the difference in the reflectance in the bands that take advantage of unique signature and the spectral difference to indicate snow from the surrounding features and even clouds.\n",
     "\n",
-    "$$ NDSI = \\frac{GREEN - SWIR}{GREEN + SWIR}$$\n",
+    "$$ NDSI = \\frac{GREEN - SWIR}{GREEN + SWIR} = \\frac{B03 - B11}{B03 + B11}$$\n",
     "\n",
     "### BRIGHTNESS\n",
     "\n",
     "Brightness provide complementary information improving the discrimination between crop and no-crop areas.\n",
     "\n",
-    "$$ Brightness =\\sqrt{GREEN^{2}+RED^{2}+NIR^{2}+SWIR^{2}} $$\n",
+    "$$ Brightness = \\sqrt{GREEN^{2}+RED^{2}+NIR^{2}+SWIR^{2}} = \\sqrt{B03^{2}+B04^{2}+B08^{2}+B11^{2}}$$\n",
     "\n",
     "\n",
     "Source : https://eos.com/make-an-analysis/index-stack/"
@@ -80,28 +80,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "You chose to compute NDVI !\n"
+      "You chose to compute NDWI !\n"
      ]
     }
    ],
    "source": [
-    "index_name   = 'NDVI'\n",
+    "index_name   = 'NDWI'\n",
     "\n",
     "if index_name == 'NDVI':\n",
     "    bands_needed = [4,8]\n",
     "\n",
     "elif index_name == 'NDWI':\n",
-    "    bands_needed = [8,12]\n",
+    "    bands_needed = [8,11]\n",
     "\n",
-    "elif index_name == 'NDWI':\n",
+    "elif index_name == 'NDSI':\n",
     "    bands_needed = [3,11]\n",
+    "\n",
+    "elif index_name == 'BRIGHTNESS':\n",
+    "    bands_needed = [3,4,8,11]\n",
     "\n",
     "print(f'You chose to compute {index_name} !')"
    ]
@@ -115,14 +118,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "General work path is set to   : /Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/\nSpectral index path is set to : /Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/NDVI/\n"
+      "General work path is set to   : /Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/\nSpectral index path is set to : /Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/NDWI/\n"
      ]
     }
    ],
@@ -160,14 +163,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "We need band 4 to compute NDVI\n--> 12 images are found \n\nWe need band 8 to compute NDVI\n--> 12 images are found \n\nCheck if the number of images found for each band is the same !!\n"
+      "We need band 8 to compute NDWI\n",
+      "--> 12 images are found \n",
+      "\n",
+      "We need band 11 to compute NDWI\n",
+      "--> 12 images are found \n",
+      "\n",
+      "Check if the number of images found for each band is the same !!\n"
      ]
     }
    ],
@@ -194,14 +203,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "--> /Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/NDVI/T31UFS_20200116T105309_NDVI.tif - already exists\n--> /Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/NDVI/T31UFS_20200212T104049_NDVI.tif - already exists\n--> /Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/NDVI/T31UFS_20200316T104709_NDVI.tif - already exists\n--> /Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/NDVI/T31UFS_20200417T104021_NDVI.tif - already exists\n--> /Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/NDVI/T31UFS_20200520T105031_NDVI.tif - already exists\n--> /Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/NDVI/T31UFS_20200621T103629_NDVI.tif - already exists\n--> /Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/NDVI/T31UFS_20200719T105031_NDVI.tif - already exists\n--> /Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/NDVI/T31UFS_20200813T104629_NDVI.tif - already exists\n--> /Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/NDVI/T31UFS_20200914T104031_NDVI.tif - already exists\n--> /Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/NDVI/T31UFS_20201019T103959_NDVI.tif - already exists\n--> /Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/NDVI/T31UFS_20201118T104329_NDVI.tif - already exists\n--> /Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/NDVI/T31UFS_20201218T104349_NDVI.tif - already exists\n"
+      "/Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/3_L2A_MASKED/T31UFS_20200116T105309_B08_10m_ROI_SCL.tif\n",
+      "/Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/3_L2A_MASKED/T31UFS_20200116T105309_B11_10m_ROI_SCL.tif\n",
+      "A new NDWI file is created : /Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/NDWI/T31UFS_20200116T105309_NDWI.tif\n",
+      "/Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/3_L2A_MASKED/T31UFS_20200212T104049_B08_10m_ROI_SCL.tif\n",
+      "/Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/3_L2A_MASKED/T31UFS_20200212T104049_B11_10m_ROI_SCL.tif\n",
+      "A new NDWI file is created : /Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/NDWI/T31UFS_20200212T104049_NDWI.tif\n",
+      "/Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/3_L2A_MASKED/T31UFS_20200316T104709_B08_10m_ROI_SCL.tif\n",
+      "/Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/3_L2A_MASKED/T31UFS_20200316T104709_B11_10m_ROI_SCL.tif\n",
+      "A new NDWI file is created : /Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/NDWI/T31UFS_20200316T104709_NDWI.tif\n",
+      "/Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/3_L2A_MASKED/T31UFS_20200417T104021_B08_10m_ROI_SCL.tif\n",
+      "/Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/3_L2A_MASKED/T31UFS_20200417T104021_B11_10m_ROI_SCL.tif\n",
+      "A new NDWI file is created : /Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/NDWI/T31UFS_20200417T104021_NDWI.tif\n",
+      "/Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/3_L2A_MASKED/T31UFS_20200520T105031_B08_10m_ROI_SCL.tif\n",
+      "/Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/3_L2A_MASKED/T31UFS_20200520T105031_B11_10m_ROI_SCL.tif\n",
+      "A new NDWI file is created : /Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/NDWI/T31UFS_20200520T105031_NDWI.tif\n",
+      "/Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/3_L2A_MASKED/T31UFS_20200621T103629_B08_10m_ROI_SCL.tif\n",
+      "/Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/3_L2A_MASKED/T31UFS_20200621T103629_B11_10m_ROI_SCL.tif\n",
+      "A new NDWI file is created : /Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/NDWI/T31UFS_20200621T103629_NDWI.tif\n",
+      "/Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/3_L2A_MASKED/T31UFS_20200719T105031_B08_10m_ROI_SCL.tif\n",
+      "/Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/3_L2A_MASKED/T31UFS_20200719T105031_B11_10m_ROI_SCL.tif\n",
+      "A new NDWI file is created : /Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/NDWI/T31UFS_20200719T105031_NDWI.tif\n",
+      "/Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/3_L2A_MASKED/T31UFS_20200813T104629_B08_10m_ROI_SCL.tif\n",
+      "/Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/3_L2A_MASKED/T31UFS_20200813T104629_B11_10m_ROI_SCL.tif\n",
+      "A new NDWI file is created : /Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/NDWI/T31UFS_20200813T104629_NDWI.tif\n",
+      "/Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/3_L2A_MASKED/T31UFS_20200914T104031_B08_10m_ROI_SCL.tif\n",
+      "/Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/3_L2A_MASKED/T31UFS_20200914T104031_B11_10m_ROI_SCL.tif\n",
+      "A new NDWI file is created : /Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/NDWI/T31UFS_20200914T104031_NDWI.tif\n",
+      "/Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/3_L2A_MASKED/T31UFS_20201019T103959_B08_10m_ROI_SCL.tif\n",
+      "/Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/3_L2A_MASKED/T31UFS_20201019T103959_B11_10m_ROI_SCL.tif\n",
+      "A new NDWI file is created : /Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/NDWI/T31UFS_20201019T103959_NDWI.tif\n",
+      "/Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/3_L2A_MASKED/T31UFS_20201118T104329_B08_10m_ROI_SCL.tif\n",
+      "/Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/3_L2A_MASKED/T31UFS_20201118T104329_B11_10m_ROI_SCL.tif\n",
+      "A new NDWI file is created : /Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/NDWI/T31UFS_20201118T104329_NDWI.tif\n",
+      "/Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/3_L2A_MASKED/T31UFS_20201218T104349_B08_10m_ROI_SCL.tif\n",
+      "/Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/3_L2A_MASKED/T31UFS_20201218T104349_B11_10m_ROI_SCL.tif\n",
+      "A new NDWI file is created : /Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/NDWI/T31UFS_20201218T104349_NDWI.tif\n"
      ]
     }
    ],
@@ -225,8 +269,11 @@
     "    \n",
     "    index_file = f'{index_path}{os.path.basename(im_file_1)[0:22]}_{index_name}.tif'\n",
     "\n",
-    "    if not os.path.isfile(index_file):\n",
+    "    print(im_file_1)\n",
+    "    print(im_file_2)\n",
     "\n",
+    "    if not os.path.isfile(index_file):\n",
+    "        \n",
     "        # Open first band and update metadata\n",
     "\n",
     "        src = rasterio.open(im_file_1, 'r')\n",
@@ -258,10 +305,15 @@
     "            # band_2 = NIR / B08\n",
     "            index_arr = (band_2 - band_1) / (band_2 + band_1)\n",
     "\n",
+    "        elif index_name == 'NDWI':\n",
+    "            # band_1 = RED / B08\n",
+    "            # band_2 = NIR / B11\n",
+    "            index_arr = (band_1 - band_2) / (band_1 + band_2)\n",
+    "        \n",
     "        elif index_name == 'NDSI':\n",
-    "            # band_1 = RED / B04\n",
-    "            # band_2 = NIR / B08\n",
-    "            index_arr = (band_2 - band_1) / (band_2 + band_1)\n",
+    "            # band_1 = RED / B03\n",
+    "            # band_2 = NIR / B11\n",
+    "            index_arr = (band_1 - band_2) / (band_1 + band_2)\n",
     "\n",
     "\n",
     "        # Write Spectral Index image into GeoTIFF\n",
