--- a/notebooks/spectral_indices.ipynb
+++ b/notebooks/spectral_indices.ipynb
@@ -133,8 +133,8 @@
     "# Directory for all work files\n",
     "\n",
     "grp_letter = 'X'\n",
-    "#work_path = f'X:/GROUP_{grp_letter}/WORK/'\n",
-    "work_path = f'/Volumes/nbdid-sst-lbrat2104/GROUP_{grp_letter}/WORK/'\n",
+    "work_path = f'X:/GROUP_{grp_letter}/WORK/'\n",
+    "#work_path = f'/Volumes/nbdid-sst-lbrat2104/GROUP_{grp_letter}/WORK/'\n",
     "\n",
     "# ----- #\n",
     "# INPUT #\n",
@@ -170,13 +170,7 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "We need band 8 to compute NDWI\n",
-      "--> 12 images are found \n",
-      "\n",
-      "We need band 11 to compute NDWI\n",
-      "--> 12 images are found \n",
-      "\n",
-      "Check if the number of images found for each band is the same !!\n"
+      "We need band 8 to compute NDWI\n--> 12 images are found \n\nWe need band 11 to compute NDWI\n--> 12 images are found \n\nCheck if the number of images found for each band is the same !!\n"
      ]
     }
    ],
@@ -210,42 +204,18 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "/Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/3_L2A_MASKED/T31UFS_20200116T105309_B08_10m_ROI_SCL.tif\n",
-      "/Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/3_L2A_MASKED/T31UFS_20200116T105309_B11_10m_ROI_SCL.tif\n",
-      "A new NDWI file is created : /Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/NDWI/T31UFS_20200116T105309_NDWI.tif\n",
-      "/Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/3_L2A_MASKED/T31UFS_20200212T104049_B08_10m_ROI_SCL.tif\n",
-      "/Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/3_L2A_MASKED/T31UFS_20200212T104049_B11_10m_ROI_SCL.tif\n",
-      "A new NDWI file is created : /Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/NDWI/T31UFS_20200212T104049_NDWI.tif\n",
-      "/Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/3_L2A_MASKED/T31UFS_20200316T104709_B08_10m_ROI_SCL.tif\n",
-      "/Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/3_L2A_MASKED/T31UFS_20200316T104709_B11_10m_ROI_SCL.tif\n",
-      "A new NDWI file is created : /Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/NDWI/T31UFS_20200316T104709_NDWI.tif\n",
-      "/Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/3_L2A_MASKED/T31UFS_20200417T104021_B08_10m_ROI_SCL.tif\n",
-      "/Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/3_L2A_MASKED/T31UFS_20200417T104021_B11_10m_ROI_SCL.tif\n",
-      "A new NDWI file is created : /Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/NDWI/T31UFS_20200417T104021_NDWI.tif\n",
-      "/Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/3_L2A_MASKED/T31UFS_20200520T105031_B08_10m_ROI_SCL.tif\n",
-      "/Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/3_L2A_MASKED/T31UFS_20200520T105031_B11_10m_ROI_SCL.tif\n",
-      "A new NDWI file is created : /Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/NDWI/T31UFS_20200520T105031_NDWI.tif\n",
-      "/Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/3_L2A_MASKED/T31UFS_20200621T103629_B08_10m_ROI_SCL.tif\n",
-      "/Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/3_L2A_MASKED/T31UFS_20200621T103629_B11_10m_ROI_SCL.tif\n",
-      "A new NDWI file is created : /Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/NDWI/T31UFS_20200621T103629_NDWI.tif\n",
-      "/Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/3_L2A_MASKED/T31UFS_20200719T105031_B08_10m_ROI_SCL.tif\n",
-      "/Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/3_L2A_MASKED/T31UFS_20200719T105031_B11_10m_ROI_SCL.tif\n",
-      "A new NDWI file is created : /Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/NDWI/T31UFS_20200719T105031_NDWI.tif\n",
-      "/Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/3_L2A_MASKED/T31UFS_20200813T104629_B08_10m_ROI_SCL.tif\n",
-      "/Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/3_L2A_MASKED/T31UFS_20200813T104629_B11_10m_ROI_SCL.tif\n",
-      "A new NDWI file is created : /Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/NDWI/T31UFS_20200813T104629_NDWI.tif\n",
-      "/Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/3_L2A_MASKED/T31UFS_20200914T104031_B08_10m_ROI_SCL.tif\n",
-      "/Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/3_L2A_MASKED/T31UFS_20200914T104031_B11_10m_ROI_SCL.tif\n",
-      "A new NDWI file is created : /Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/NDWI/T31UFS_20200914T104031_NDWI.tif\n",
-      "/Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/3_L2A_MASKED/T31UFS_20201019T103959_B08_10m_ROI_SCL.tif\n",
-      "/Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/3_L2A_MASKED/T31UFS_20201019T103959_B11_10m_ROI_SCL.tif\n",
-      "A new NDWI file is created : /Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/NDWI/T31UFS_20201019T103959_NDWI.tif\n",
-      "/Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/3_L2A_MASKED/T31UFS_20201118T104329_B08_10m_ROI_SCL.tif\n",
-      "/Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/3_L2A_MASKED/T31UFS_20201118T104329_B11_10m_ROI_SCL.tif\n",
-      "A new NDWI file is created : /Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/NDWI/T31UFS_20201118T104329_NDWI.tif\n",
-      "/Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/3_L2A_MASKED/T31UFS_20201218T104349_B08_10m_ROI_SCL.tif\n",
-      "/Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/3_L2A_MASKED/T31UFS_20201218T104349_B11_10m_ROI_SCL.tif\n",
-      "A new NDWI file is created : /Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/NDWI/T31UFS_20201218T104349_NDWI.tif\n"
+      "--> /Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/NDWI/T31UFS_20200116T105309_NDWI.tif - already exists\n",
+      "--> /Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/NDWI/T31UFS_20200212T104049_NDWI.tif - already exists\n",
+      "--> /Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/NDWI/T31UFS_20200316T104709_NDWI.tif - already exists\n",
+      "--> /Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/NDWI/T31UFS_20200417T104021_NDWI.tif - already exists\n",
+      "--> /Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/NDWI/T31UFS_20200520T105031_NDWI.tif - already exists\n",
+      "--> /Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/NDWI/T31UFS_20200621T103629_NDWI.tif - already exists\n",
+      "--> /Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/NDWI/T31UFS_20200719T105031_NDWI.tif - already exists\n",
+      "--> /Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/NDWI/T31UFS_20200813T104629_NDWI.tif - already exists\n",
+      "--> /Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/NDWI/T31UFS_20200914T104031_NDWI.tif - already exists\n",
+      "--> /Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/NDWI/T31UFS_20201019T103959_NDWI.tif - already exists\n",
+      "--> /Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/NDWI/T31UFS_20201118T104329_NDWI.tif - already exists\n",
+      "--> /Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/NDWI/T31UFS_20201218T104349_NDWI.tif - already exists\n"
      ]
     }
    ],
@@ -268,9 +238,6 @@
     "    im_file_2 = im_file_2.replace('\\\\','/')\n",
     "    \n",
     "    index_file = f'{index_path}{os.path.basename(im_file_1)[0:22]}_{index_name}.tif'\n",
-    "\n",
-    "    print(im_file_1)\n",
-    "    print(im_file_2)\n",
     "\n",
     "    if not os.path.isfile(index_file):\n",
     "        \n",
@@ -339,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
