--- a/notebooks/region_of_interest.ipynb
+++ b/notebooks/region_of_interest.ipynb
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -81,22 +81,27 @@
   },
   {
    "source": [
-    "## Set directory and parameters"
+    "## Set directory"
    ],
    "cell_type": "markdown",
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Directory for all work files\n",
+    "#computer_path = 'X:/'\n",
+    "computer_path = '/Volumes/nbdid-sst-lbrat2104/'\n",
+    "grp_letter    = 'X'\n",
     "\n",
-    "#grp_letter = 'Z'\n",
-    "#work_path = f'X:/GROUP_{grp_letter}/WORK/'\n",
-    "work_path = '/Users/Nicolas/Documents/LBRAT2104/WORK/'\n",
+    "# Directory for all work files\n",
+    "work_path = f'{computer_path}GROUP_{grp_letter}/WORK/'\n",
+    "\n",
+    "# ----- #\n",
+    "# INPUT #\n",
+    "# ----- #\n",
     "\n",
     "roi_path = f'{work_path}ROI/'\n",
     "\n",
