--- a/notebooks/extract_stats_timeserie.ipynb
+++ b/notebooks/extract_stats_timeserie.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -64,11 +64,12 @@
     }
    ],
    "source": [
+    "#computer_path = 'X:/'\n",
+    "computer_path = '/Volumes/nbdid-sst-lbrat2104/'\n",
+    "grp_letter    = 'X'\n",
     "\n",
-    "grp_letter = 'X'\n",
-    "#work_path = f'X:/GROUP_{grp_letter}/TP/llesne/DATA/'\n",
-    "#work_path = f'/Volumes/nbdid-sst-lbrat2104/GROUP_{grp_letter}/TP/llesne/DATA/'\n",
-    "work_path = f'/Volumes/nbdid-sst-lbrat2104/GROUP_{grp_letter}/WORK/'\n",
+    "# Directory for all work files\n",
+    "work_path = f'{computer_path}GROUP_{grp_letter}/WORK/'\n",
     "\n",
     "\n",
     "# Directory where the images of the timeserie are stored\n",
