--- a/notebooks/in_situ.ipynb
+++ b/notebooks/in_situ.ipynb
@@ -34,9 +34,7 @@
     "- ...\n",
     "\n",
     "\n",
-    "Source : http://wiki.gis.com/wiki/index.php/In-situ_data\n",
-    "\n",
-    "When we work "
+    "Source : http://wiki.gis.com/wiki/index.php/In-situ_data"
    ],
    "cell_type": "markdown",
    "metadata": {}
