--- a/notebooks/spectral_indices.ipynb
+++ b/notebooks/spectral_indices.ipynb
@@ -130,11 +130,12 @@
     }
    ],
    "source": [
-    "# Directory for all work files\n",
+    "#computer_path = 'X:/'\n",
+    "computer_path = '/Volumes/nbdid-sst-lbrat2104/'\n",
+    "grp_letter    = 'X'\n",
     "\n",
-    "grp_letter = 'X'\n",
-    "work_path = f'X:/GROUP_{grp_letter}/WORK/'\n",
-    "#work_path = f'/Volumes/nbdid-sst-lbrat2104/GROUP_{grp_letter}/WORK/'\n",
+    "# Directory for all work files\n",
+    "work_path = f'{computer_path}GROUP_{grp_letter}/WORK/'\n",
     "\n",
     "# ----- #\n",
     "# INPUT #\n",
