--- a/notebooks/in_situ_sampling_design.ipynb
+++ b/notebooks/in_situ_sampling_design.ipynb
@@ -10,13 +10,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10-final"
+   "version": "3.6.10"
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "python3",
-   "display_name": "Python 3",
-   "language": "python"
+   "name": "python3610jvsc74a57bd0d44a822591a3717b24d3edf137db462f6168d56f0b857c252a9153258824edbd",
+   "display_name": "Python 3.6.10 64-bit ('python_3_6': conda)"
   }
  },
  "nbformat": 4,
@@ -71,37 +70,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Vector input path are set to : /Users/Nicolas/OneDrive - UCL/LBRAT2104/VECTOR/\nRaster input path are set to : /Users/Nicolas/OneDrive - UCL/LBRAT2104/Output/\nOutput path are set to       : /Users/Nicolas/OneDrive - UCL/LBRAT2104/Output/\n"
+      "In-Situ data path is set to : /Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/IN_SITU/\nIn-Situ data for classification path is set to : /Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/IN_SITU_SD/\n"
      ]
     }
    ],
    "source": [
-    "grp_letter   = 'X'\n",
-    "student_name = 'ndeffense'\n",
+    "#computer_path = 'X:/'\n",
+    "computer_path = '/Volumes/nbdid-sst-lbrat2104/'\n",
+    "grp_letter    = 'X'\n",
     "\n",
-    "# When you are connected to the computer room\n",
-    "'''\n",
-    "vector_path = 'X:/data/VECTOR/'\n",
-    "raster_path = 'X:/data/RASTER/'\n",
-    "output_path = f'X:/GROUP_{grp_letter}/TP/{student_name}/DATA/'\n",
-    "'''\n",
+    "# Directory for all work files\n",
+    "work_path = f'{computer_path}GROUP_{grp_letter}/WORK/'\n",
     "\n",
-    "# When you are connected to your personnal computer\n",
-    "vector_path = '/Users/Nicolas/OneDrive - UCL/LBRAT2104/VECTOR/'\n",
-    "raster_path = '/Users/Nicolas/OneDrive - UCL/LBRAT2104/Output/'\n",
-    "output_path = '/Users/Nicolas/OneDrive - UCL/LBRAT2104/Output/'\n",
+    "# ----- #\n",
+    "# INPUT #\n",
+    "# ----- #\n",
+    "\n",
+    "clipped_path = f'{work_path}2_L2A_CLIPPED/'\n",
+    "in_situ_path = f'{work_path}IN_SITU/'\n",
+    "\n",
+    "# ------ #\n",
+    "# OUTPUT #\n",
+    "# ------ #\n",
+    "\n",
+    "in_situ_SD_path = f'{work_path}IN_SITU_SD/'\n",
+    "\n",
+    "Path(in_situ_SD_path).mkdir(parents=True, exist_ok=True)\n",
     "\n",
     "\n",
-    "print(f'Vector input path are set to : {vector_path}')\n",
-    "print(f'Raster input path are set to : {raster_path}')\n",
-    "print(f'Output path are set to       : {output_path}')"
+    "print(f'In-Situ data path is set to : {in_situ_path}')\n",
+    "print(f'In-Situ data for classification path is set to : {in_situ_SD_path}')\n"
    ]
   },
   {
@@ -117,18 +122,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "epsg:32631\n"
+     ]
+    },
+    {
+     "output_type": "display_data",
+     "data": {
+      "text/plain": "     ID  CROP                     LC  CODE  IRRIGATION  \\\n0  1877     1  Maize (for livestock)   201           0   \n1  1878     1  Common wheat (winter)   311           0   \n2  1879     1  Maize (for livestock)   201           0   \n3  1880     1  Grassland (temporary)    62           0   \n4  3251     1        Barley (winter)   321           0   \n\n                                            geometry  \n0  POLYGON ((634719.076 5591248.019, 634788.109 5...  \n1  POLYGON ((634996.603 5591774.690, 635051.974 5...  \n2  POLYGON ((635196.857 5591331.590, 635199.724 5...  \n3  POLYGON ((635003.339 5591080.041, 635021.807 5...  \n4  POLYGON ((634708.850 5590509.262, 634710.400 5...  ",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>ID</th>\n      <th>CROP</th>\n      <th>LC</th>\n      <th>CODE</th>\n      <th>IRRIGATION</th>\n      <th>geometry</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>1877</td>\n      <td>1</td>\n      <td>Maize (for livestock)</td>\n      <td>201</td>\n      <td>0</td>\n      <td>POLYGON ((634719.076 5591248.019, 634788.109 5...</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>1878</td>\n      <td>1</td>\n      <td>Common wheat (winter)</td>\n      <td>311</td>\n      <td>0</td>\n      <td>POLYGON ((634996.603 5591774.690, 635051.974 5...</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>1879</td>\n      <td>1</td>\n      <td>Maize (for livestock)</td>\n      <td>201</td>\n      <td>0</td>\n      <td>POLYGON ((635196.857 5591331.590, 635199.724 5...</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>1880</td>\n      <td>1</td>\n      <td>Grassland (temporary)</td>\n      <td>62</td>\n      <td>0</td>\n      <td>POLYGON ((635003.339 5591080.041, 635021.807 5...</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>3251</td>\n      <td>1</td>\n      <td>Barley (winter)</td>\n      <td>321</td>\n      <td>0</td>\n      <td>POLYGON ((634708.850 5590509.262, 634710.400 5...</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "metadata": {}
+    },
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Raster template file : /Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/2_L2A_CLIPPED/T31UFS_20200116T105309_B02_10m_ROI.tif\n"
+     ]
+    }
+   ],
    "source": [
-    "# In-Situ datasets\n",
-    "in_situ_shp = f'{vector_path}WALLONIA_2018_IN_SITU_ROI.shp'\n",
+    "# In-Situ original dataset\n",
+    "# ------------------------\n",
+    "\n",
+    "in_situ_name = 'WALLONIA_2018_IN_SITU_ROI'\n",
+    "\n",
+    "in_situ_shp       = f'{in_situ_path}{in_situ_name}.shp'\n",
+    "in_situ_count_shp = f'{in_situ_SD_path}{in_situ_name}_pixCount.shp'\n",
+    "\n",
     "\n",
     "gdf = gpd.read_file(in_situ_shp)\n",
     "\n",
-    "# Raster template with no NaN (before applying SCL)\n",
-    "img_temp_tif = f'{raster_path}IM_ROI/T31UFR_20200316T104709_B02_10m_ROI.tif'\n",
+    "epsg_code = gdf.crs\n",
     "\n",
+    "print(epsg_code)\n",
+    "\n",
+    "display(gdf.head())\n",
+    "\n",
+    "\n",
+    "# Raster template with no NaN (before applying SCL)\n",
+    "# -------------------------------------------------\n",
+    "\n",
+    "img_temp_tif = glob.glob(f'{clipped_path}*.tif')[0]\n",
+    "\n",
+    "print(f'Raster template file : {img_temp_tif}')\n",
     "\n",
     "# Parameters\n",
     "# ----------\n",
@@ -147,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -251,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -297,11 +341,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Write In-Situ --> /Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/IN_SITU_SD/WALLONIA_2018_IN_SITU_ROI_pixCount.shp\n"
+     ]
+    }
+   ],
    "source": [
-    "in_situ_count_shp = f'{in_situ_shp[:-4]}_pixCount.shp'\n",
+    "print(f'Write In-Situ --> {in_situ_count_shp}')\n",
+    "\n",
+    "pixCount_gdf = pixCount_gdf.set_crs(epsg_code)\n",
     "\n",
     "pixCount_gdf.to_file(in_situ_count_shp)"
    ]
@@ -320,14 +374,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "in_situ_cal_shp = f'{output_path}IN_SITU/WALLONIA_2018_IN_SITU_ROI_cal.shp'\n",
-    "in_situ_val_shp = f'{output_path}IN_SITU/WALLONIA_2018_IN_SITU_ROI_val.shp'\n",
+    "in_situ_cal_shp = f'{in_situ_SD_path}{in_situ_name}_cal.shp'\n",
+    "in_situ_val_shp = f'{in_situ_SD_path}{in_situ_name}_val.shp'\n",
     "\n",
-    "csv_strategies = f'{output_path}IN_SITU/WALLONIA_2018_IN_SITU_ROI_sampling_design.csv'\n",
+    "csv_strategies = f'{in_situ_SD_path}{in_situ_name}_sampling_design.csv'\n",
     "\n",
     "# Open the in-situ shapefile in a GeoDataFrame\n",
     "\n",
@@ -352,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -382,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -413,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -471,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -494,7 +548,7 @@
     "    pixel_cal = int(classes_strategy_all['pix_cal'].loc[classes_strategy_all['CODE'] == code])\n",
     "\n",
     "    parcels_by_sub_class = parcels_best_gdf.loc[parcels_best_gdf['CODE'] == code]\n",
-    "    parcels_by_sub_class_reordered = parcels_by_sub_class.sample(len(parcels_by_sub_class), random_state=10)\n",
+    "    parcels_by_sub_class_reordered = parcels_by_sub_class.sample(len(parcels_by_sub_class),random_state=10)\n",
     "\n",
     "    parcels_cal_gdf = parcels_by_sub_class_reordered[parcels_by_sub_class_reordered['pix_count'].cumsum() <= pixel_cal]\n",
     "    parcels_val_gdf = parcels_by_sub_class_reordered[parcels_by_sub_class_reordered['pix_count'].cumsum() > pixel_cal]\n",
@@ -530,7 +584,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "print(f'Write calibration In-Situ --> {in_situ_cal_shp}')\n",
+    "\n",
     "parcels_cal_final_gdf.to_file(in_situ_cal_shp)\n",
+    "\n",
+    "print(f'Write validation In-Situ --> {in_situ_cal_shp}')\n",
+    "\n",
     "parcels_val_final_gdf.to_file(in_situ_val_shp)\n",
     "\n",
     "classes_strategy_all.to_csv(csv_strategies, index=False, sep=';')"
